--- a/text/accumulation.tex
+++ b/text/accumulation.tex
@@ -104,13 +104,13 @@ Our formalisms begin by defining $\partialstate$ as a characterization of (\ie v
 \begin{equation}
   \label{eq:partialstate}
   \partialstate \equiv \tuple{\begin{aligned}
-    &\isa{\ps¬accounts}{\dict{\serviceid}{\serviceaccount}} \,,\;
+    &\isa{\ps¬accounts}{\dictionary{\serviceid}{\serviceaccount}} \,,\;
     \isa{\ps¬stagingset}{\sequence[\valcount]{\valkey}} \,,\;
     \isa{\ps¬authqueue}{\sequence[_\corecount]{\sequence[\mathsf{Q}]{\hash}}} \,,\\
     &\isa{\ps¬manager}{\serviceid} \,,\;
     \isa{\ps¬assigners}{\sequence[\corecount]{\serviceid}} \,,\;
     \isa{\ps¬delegator}{\serviceid} \,,\;
-    \isa{\ps¬alwaysaccers}{\dict{\serviceid}{\gas}}
+    \isa{\ps¬alwaysaccers}{\dictionary{\serviceid}{\gas}}
   \end{aligned}}
 \end{equation}
 
@@ -134,16 +134,16 @@ Finally, we denote the set of service/hash pairs, utilized as a service-indexed 
 We define the outer accumulation function $\accseq$ which transforms a gas-limit, a sequence of work-reports, an initial partial-state and a dictionary of services enjoying free accumulation, into a tuple of the number of work-results accumulated, a posterior state-context, the resultant deferred-transfers and accumulation-output pairings:
 \begin{equation}
   \accseq\colon\abracegroup{
-    &\tuple{\gas, \sequence{\workreport}, \partialstate, \dict{\serviceid}{\gas}} \to \tuple{\N, \partialstate, \defxfers, \servouts, \gasused} \\
-    &\tup{g, \mathbf{w}, \mathbf{o}, \mathbf{f}} \!\mapsto\! \begin{cases}
-      \tup{0, \mathbf{o}, \sq{}, \emset, \sq{}} &
+    &\tuple{\gas, \sequence{\workreport}, \partialstate, \dictionary{\serviceid}{\gas}} \to \tuple{\N, \partialstate, \defxfers, \servouts, \gasused} \\
+    &\tup{g, \mathbf{w}, \psX, \mathbf{f}} \!\mapsto\! \begin{cases}
+      \tup{0, \psX, \sq{}, \emset, \sq{}} &
         \when i = 0 \\
-      \tup{i + j, \mathbf{o}', \mathbf{t}^* \!\!\concat \mathbf{t}, \mathbf{b}^* \!\cup \mathbf{b}, \mathbf{u}^* \!\!\concat \mathbf{u}}\!\!\!\! &
+      \tup{i + j, \psX', \mathbf{t}^* \!\!\concat \mathbf{t}, \mathbf{b}^* \!\cup \mathbf{b}, \mathbf{u}^* \!\!\concat \mathbf{u}}\!\!\!\! &
         \text{o/w}\!\!\!\!\!\!\!\! \\
     \end{cases} \\
     &\quad\where i = \max(\Nmax{\len{\mathbf{w}} + 1}): \sum_{w \in \mathbf{w}\sub{\dots i}}\sum_{r \in w_\wr¬digests}(r_\wd¬gaslimit) \le g \\
-    &\quad\also \tup{\mathbf{o}^*, \mathbf{t}^*, \mathbf{b}^*, \mathbf{u}^*} = \accpar(\mathbf{o}, \mathbf{w}\sub{\dots i}, \mathbf{f}) \\
-    &\quad\also \tup{j, \mathbf{o}', \mathbf{t}, \mathbf{b}, \mathbf{u}} = \accseq(g - \!\!\!\!\sum_{\tup{s, u} \in \mathbf{u}^*}\!\!\!\!u, \mathbf{w}\sub{i\dots}, \mathbf{o}^*, \emset)
+    &\quad\also \tup{\psX^*, \mathbf{t}^*, \mathbf{b}^*, \mathbf{u}^*} = \accpar(\psX, \mathbf{w}\sub{\dots i}, \mathbf{f}) \\
+    &\quad\also \tup{j, \psX', \mathbf{t}, \mathbf{b}, \mathbf{u}} = \accseq(g - \!\!\!\!\sum_{\tup{s, u} \in \mathbf{u}^*}\!\!\!\!u, \mathbf{w}\sub{i\dots}, \psX^*, \emset)
   }
 \end{equation}
 
@@ -158,8 +158,8 @@ We define the outer accumulation function $\accseq$ which transforms a gas-limit
 We come to define the parallelized accumulation function $\accpar$ which, with the help of the single-service accumulation function $\accone$, transforms an initial state-context, together with a sequence of work-reports and a dictionary of privileged always-accumulate services, into a tuple of the total gas utilized in \textsc{pvm} execution, a posterior state-context and the resultant accumulation-output pairings and deferred-transfers:
 \begin{equation}
   \accpar\colon\abracegroup[\;]{\begin{aligned}
-    &\tuple{\partialstate, \sequence{\workreport}, \dict{\serviceid}{\gas}} \to \tuple{\partialstate, \defxfers, \servouts, \gasused} \\
-    &\tup{\mathbf{o}, \mathbf{w}, \mathbf{f}} \mapsto \tup{
+    &\tuple{\partialstate, \sequence{\workreport}, \dictionary{\serviceid}{\gas}} \to \tuple{\partialstate, \defxfers, \servouts, \gasused} \\
+    &\tup{\psX, \mathbf{w}, \mathbf{f}} \mapsto \tup{
       \tup{
         \local¬accounts', \local¬stagingset', \local¬authqueue', \local¬manager', \local¬assigners', \local¬delegator', \local¬alwaysaccers'
       }, \concatall{\mathbf{t}}, \mathbf{b}, \mathbf{u}
@@ -167,12 +167,12 @@ We come to define the parallelized accumulation function $\accpar$ which, with t
     &\text{where:}\\
     &\ \begin{aligned}
       \using \mathbf{s} &= \set{\build{
-        \mathbf{r}_\wd¬service
+        \mathbf{r}_\wd¬serviceindex
         }{
           w \in \mathbf{w}, \mathbf{r} \in w_\wr¬digests
         }} \cup \keys{\mathbf{f}} \\
       \mathbf{u} &= \sq{\build{
-          \tup{s, \accone(\mathbf{o}, \mathbf{w}, \mathbf{f}, s)_\ao¬gasused}
+          \tup{s, \accone(\psX, \mathbf{w}, \mathbf{f}, s)_\ao¬gasused}
         }{
           s \orderedin \mathbf{s}
         }} \\
@@ -180,46 +180,46 @@ We come to define the parallelized accumulation function $\accpar$ which, with t
           \tup{s, b}
         }{
           s \in \mathbf{s},\,
-          b = \accone(\mathbf{o}, \mathbf{w}, \mathbf{f}, s)_\ao¬account,\,
+          b = \accone(\psX, \mathbf{w}, \mathbf{f}, s)_\ao¬yield,\,
           b \ne \none
         }} \\
       \mathbf{t} &= \sq{\build{
-          \accone(\mathbf{o}, \mathbf{w}, \mathbf{f}, s)_\ao¬defxfers
+          \accone(\psX, \mathbf{w}, \mathbf{f}, s)_\ao¬defxfers
         }{
           s \orderedin \mathbf{s}
         }} \\
       \local¬accounts' &= \fnprovide(
         (\ps¬accounts \cup \mathbf{n}) \setminus \mathbf{m},
-        \bigcup_{s \in \mathbf{s}} \accone(\mathbf{o}, \mathbf{w}, \mathbf{f}, s)_\ao¬provisions
+        \bigcup_{s \in \mathbf{s}} \accone(\psX, \mathbf{w}, \mathbf{f}, s)_\ao¬provisions
       ) \\
-      &\tup{\ps¬accounts, \ps¬stagingset, \ps¬authqueue, \ps¬manager, \ps¬alwaysaccers} = \mathbf{o} \\
+      &\tup{\ps¬accounts, \ps¬stagingset, \ps¬authqueue, \ps¬manager, \ps¬alwaysaccers} = \psX \\
       \tup{\local¬manager', \local¬assigners^*, \local¬delegator^*, \local¬alwaysaccers'} &=
-        (\accone(\mathbf{o}, \mathbf{w}, \mathbf{f}, m)_\ao¬poststate)_{
+        (\accone(\psX, \mathbf{w}, \mathbf{f}, m)_\ao¬poststate)_{
           \tup{\ps¬manager, \ps¬assigners, \ps¬delegator, \ps¬alwaysaccers}
         } \\
       \forall c \in \coreindex :
         \local¬assigners'\sub{c} &= ((
-          \accone(\mathbf{o}, \mathbf{w}, \mathbf{f}, \local¬assigners^*\sub{c})_\ao¬poststate
+          \accone(\psX, \mathbf{w}, \mathbf{f}, \local¬assigners^*\sub{c})_\ao¬poststate
         )_\ps¬assigners)\sub{c} \\
       \local¬delegator' &= (
-          \accone(\mathbf{o}, \mathbf{w}, \mathbf{f}, \local¬delegator^*)_\ao¬poststate
+          \accone(\psX, \mathbf{w}, \mathbf{f}, \local¬delegator^*)_\ao¬poststate
         )_\ps¬delegator \\
       \local¬stagingset' &= (
-          \accone(\mathbf{o}, \mathbf{w}, \mathbf{f}, \ps¬delegator)_\ao¬poststate
+          \accone(\psX, \mathbf{w}, \mathbf{f}, \ps¬delegator)_\ao¬poststate
       )_\ps¬stagingset \\
       \forall c \in \coreindex :
         \local¬authqueue'\sub{c} &= ((
-          \accone(\mathbf{o}, \mathbf{w}, \mathbf{f}, \ps¬assigners\sub{c})_\ao¬poststate
+          \accone(\psX, \mathbf{w}, \mathbf{f}, \ps¬assigners\sub{c})_\ao¬poststate
         )_\ps¬authqueue)\sub{c} \\
       \mathbf{n} &= \bigcup_{s \in \mathbf{s}}( \set{
-          (\accone(\mathbf{o}, \mathbf{w}, \mathbf{f}, s)_\ao¬poststate)_\ps¬accounts
+          (\accone(\psX, \mathbf{w}, \mathbf{f}, s)_\ao¬poststate)_\ps¬accounts
             \setminus
           \keys{\ps¬accounts \setminus \set{s}}
         } ) \\
       \mathbf{m} &= \bigcup_{s \in \mathbf{s}}(
         \keys{\ps¬accounts}
           \setminus
-        \keys{(\accone(\mathbf{o}, \mathbf{w}, \mathbf{f}, s)_\ao¬poststate)_\ps¬accounts}
+        \keys{(\accone(\psX, \mathbf{w}, \mathbf{f}, s)_\ao¬poststate)_\ps¬accounts}
       )
     \end{aligned}
   \end{aligned}}
@@ -228,7 +228,7 @@ We come to define the parallelized accumulation function $\accpar$ which, with t
 And $\fnprovide$ is the preimage integration function, which transforms a dictionary of service states and a set of service/hash pairs into a new dictionary of service states. Preimage provisions into services which no longer exist or whose relevant request is dropped are disregarded:
 \begin{equation}
   \fnprovide\colon\abracegroup{
-    &\tuple{\dict{\serviceid}{\serviceaccount}, \protoset{\tuple{\serviceid, \blob}}} \to \dict{\serviceid}{\serviceaccount} \\
+    &\tuple{\dictionary{\serviceid}{\serviceaccount}, \protoset{\tuple{\serviceid, \blob}}} \to \dictionary{\serviceid}{\serviceaccount} \\
     &\tup{\mathbf{d}, \mathbf{p}} \mapsto \mathbf{d}'\;\where \mathbf{d}' = \mathbf{d}\;\text{except:} \\
     &\quad\forall \tup{s, \mathbf{i}} \in \mathbf{p},\;
       s \in \keys{\mathbf{d}},\;
@@ -241,42 +241,45 @@ And $\fnprovide$ is the preimage integration function, which transforms a dictio
 We note that while forming the union of all altered, newly added service and newly removed indices, defined in the above context as $\keys{\mathbf{n}} \cup \mathbf{m}$, different services may not each contribute the same index for a new, altered or removed service. This cannot happen for the set of removed and altered services since the code hash of removable services has no known preimage and thus cannot execute itself to make an alteration. For new services this should also never happen since new indices are explicitly selected to avoid such conflicts. In the unlikely event it does happen, the block must be considered invalid.
 
 The single-service accumulation function, $\accone$, transforms an initial state-context, sequence of work-reports and a service index into an alterations state-context, a sequence of \emph{transfers}, a possible accumulation-output and the actual \textsc{pvm} gas used. This function wrangles the work-items of a particular service from a set of work-reports and invokes \textsc{pvm} execution with said data:
-\begin{equation}
-  \operandtuple \equiv \tuple{
-    \isa{\ot¬packagehash}{\hash},
-    \isa{\ot¬segroot}{\hash},
-    \isa{\ot¬authorizer}{\hash},
-    \isa{\ot¬payloadhash}{\hash},
-    \isa{\ot¬gaslimit}{\gas},
-    \isa{\ot¬result}{\blob \cup \workerror},
-    \isa{\ot¬authtrace}{\blob}
+\begin{align}
+  \label{eq:operandtuple}
+  \operandtuple &\equiv \tuple{
+    \begin{alignedat}{5}
+      \isa{\ot¬packagehash&}{\hash},\;
+      \isa{&\ot¬segroot&}{\hash},\;
+      \isa{&\ot¬authorizer&}{\hash},\;
+      \isa{\ot¬payloadhash}{\hash},\;\\
+      \isa{\ot¬gaslimit&}{\gas},\;
+      \isa{&\ot¬authtrace&}{\blob},\;
+      \isa{&\ot¬result&}{\blob \cup \workerror}
+    \end{alignedat}
+  }\\
+  \label{eq:acconeout}
+  \acconeout &\equiv \tuple{
+    \begin{alignedat}{3}
+      \isa{\ao¬poststate&}{\partialstate},\;
+      \isa{&\ao¬defxfers&}{\defxfers},\;
+      \isa{\ao¬yield}{\optional{\hash}},\;\\
+      \isa{\ao¬gasused&}{\gas},\;
+      \isa{&\ao¬provisions&}{\protoset{\tuple{\serviceid, \blob}}}
+    \end{alignedat}
   }
-\end{equation}
+\end{align}
 \begin{align}
     &\accone \colon \abracegroup[\;]{
     &\begin{aligned}
       \tuple{\begin{aligned}
         &\partialstate, \sequence{\workreport},\\
-        &\dict{\serviceid}{\gas}, \serviceid
+        &\dictionary{\serviceid}{\gas}, \serviceid
       \end{aligned}}
-      &\to \tuple{
-        \begin{alignedat}{3}
-          \isa{\ao¬poststate&}{\partialstate}\,,\;
-          \isa{&\ao¬defxfers&}{\defxfers}\,,\;
-          \isa{\ao¬account}{\optional{\hash}}\,,\\
-          \isa{\ao¬gasused&}{\gas}\,,\;
-          \isa{&\ao¬provisions&}{\protoset{\tuple{\serviceid, \blob}}}
-        \end{alignedat}
-      } \\
-      \tup{\mathbf{o}, \mathbf{w}, \mathbf{f}, s} &\mapsto \Psi_A(\mathbf{o}, \thetime', s, g, \mathbf{i})
+      &\to \acconeout \\
+      \tup{\psX, \mathbf{w}, \mathbf{f}, s} &\mapsto \Psi_A(\psX, \thetime', s, g, \mathbf{i})
     \end{aligned} \\
     &\text{where:} \\
     &\ \begin{aligned}
-      g &= \subifnone{\mathbf{f}\sub{s}, 0} + \!\!\!\!\sum_{w \in \mathbf{w}, \mathbf{r} \in w_\wr¬digests , \mathbf{r}_\wd¬service = s}\!\!\!\!(\mathbf{r}_\wr¬authgasused) \\
+      g &= \subifnone{\mathbf{f}\sub{s}, 0} + \!\!\!\!\sum_{w \in \mathbf{w}, \mathbf{r} \in w_\wr¬digests , \mathbf{r}_\wd¬serviceindex = s}\!\!\!\!(\mathbf{r}_\wr¬authgasused) \\
       \mathbf{i} &= \sq{\build{
         \tup{\begin{alignedat}{3}
-          % TODO: Rename \mathbf{o} to something else, to allow mathbf{a} to become \mathbf{o}.
-          % TODO: Rename k to h. Then 5 of the 6 fields keep their names.
           \is{\ot¬result}{\mathbf{r}_\wd¬result},\,
           \is{\ot¬gaslimit}{\mathbf{r}_\wd¬gaslimit},\,
           \is{\ot¬payloadhash}{\mathbf{r}_\wd¬payloadhash},\,
@@ -288,7 +291,7 @@ The single-service accumulation function, $\accone$, transforms an initial state
       }{
         \begin{alignedat}{2}
           w& \orderedin \mathbf{w},&\\
-          \mathbf{r}& \orderedin w_\wr¬digests,&\ \mathbf{r}_\wd¬service = s
+          \mathbf{r}& \orderedin w_\wr¬digests,&\ \mathbf{r}_\wd¬serviceindex = s
         \end{alignedat}
       }}
     \end{aligned}
@@ -303,37 +306,52 @@ This introduces $\operandtuple$, the set of wrangled \emph{operand tuples}, used
 
 Given the result of the top-level $\accseq$, we may define the posterior state $\privileges'$, $\authqueue'$ and $\stagingset'$ as well as the first intermediate state of the service-accounts $\accountspostacc$ and the Accumulation Output Log $\lastaccout'$:
 \begin{align}
-  \using &g = \max\left(
+  &\using g = \max\left(
     \mathsf{G}_T,
     \mathsf{G}_A \cdot \corecount + \textstyle \sum_{x \in \values{\alwaysaccers}}(x)
   \right)\\
-  \also &\mathbf{o} = \tup{
-    \accountspre, \stagingset, \authqueue, \manager, \assigners, \delegator, \alwaysaccers
-  } \\
+  &\also \psX = \tup{
+    \is{\ps¬accounts}{\accountspre},
+    \is{\ps¬stagingset}{\stagingset},
+    \is{\ps¬authqueue}{\authqueue},
+    \is{\ps¬manager}{\manager},
+    \is{\ps¬assigners}{\assigners},
+    \is{\ps¬delegator}{\delegator},
+    \is{\ps¬alwaysaccers}{\alwaysaccers}
+  }
+  \!\!\!\!\!\\
   &\tup{
-    \numberofitemsaccumulated, \mathbf{o}', \deferredtransfers, \lastaccout', \servicegasused
-  } \equiv \accseq(g, \justbecameavailable^*, \mathbf{o}, \alwaysaccers) \\
+    \numberofitemsaccumulated, \psX', \deferredtransfers, \lastaccout', \servicegasused
+  } \equiv \accseq(g, \justbecameavailable^*, \psX, \alwaysaccers) \\
   &\tup{
-    \accountspostacc, \stagingset', \authqueue', \manager', \assigners', \delegator', \alwaysaccers'
-  } \equiv \mathbf{o}'
+    \is\ps¬accounts{\accountspostacc},
+    \is\ps¬stagingset{\stagingset'},
+    \is\ps¬authqueue{\authqueue'},
+    \is\ps¬manager{\manager'},
+    \is\ps¬assigners{\assigners'},
+    \is\ps¬delegator{\delegator'},
+    \is\ps¬alwaysaccers{\alwaysaccers'}
+  } \equiv \psX'
+  \!\!\!\!\!
 \end{align}
 
 From this formulation, we also receive $\deferredtransfers$, the grand sequence of deferred transfers, together with $\numberofitemsaccumulated$, the total number of work-items accumulated and $\mathbf{u}$, the gas used in the accumulation process for each service. Each of these terms are used shortly.
 
 We compose $\accumulationstatistics$, our accumulation statistics, which is a mapping from the service indices which were accumulated to the amount of gas used throughout accumulation and the number of work-items accumulated. Formally:
 \begin{align}
-  &\accumulationstatistics \in \dict{\serviceid}{\tuple{\gas, \N}} \\
+  &\accumulationstatistics \in \dictionary{\serviceid}{\tuple{\gas, \N}} \\
   &\textstyle \accumulationstatistics \equiv \set{\build{
     \kv{s}{
       \tup{\sum_{\tup{s, u} \in \mathbf{u}}(u), \len{N(s)}}
     }
   }{
     N(s) \ne \sq{}
-  }} \\
+  }}
+  \!\!\!\!\\
   \where &N(s) \equiv \sq{\build{r}{
     w \orderedin \justbecameavailable^*\sub{\dots n} ,
     r \orderedin w_\wr¬digests ,
-    r_\wd¬service = s
+    r_\wd¬serviceindex = s
   }}
 \end{align}
 
@@ -371,7 +389,7 @@ The second intermediate state $\accountspostxfer$ may then be defined with all t
 Furthermore we build the deferred transfers statistics value $\deferredtransfersstatistics$ as the number of transfers and the total gas used in transfer processing for each \emph{destination} service index. Formally:
 \begin{align}
   \label{eq:deferredtransfers}
-  &\deferredtransfersstatistics \in \dict{\serviceid}{\tuple{\N, \gas}} \\
+  &\deferredtransfersstatistics \in \dictionary{\serviceid}{\tuple{\N, \gas}} \\
   &\textstyle \deferredtransfersstatistics \equiv \set{ \build { \kv{d}{\tup{\len{\selectxfers(d)}, u}} }{
     \begin{aligned}
       \selectxfers(d) &\ne \sq{},\\
@@ -391,6 +409,7 @@ We define the final state of the ready queue and the accumulated map by integrat
     \sq{} &\when 1 \le i < \thetime' - \thetime \\
     E(\cyclic{\ready}\sub{m - i}, \accumulated'\sub{\epochlen - 1}) &\when i \ge \thetime' - \thetime
   \end{cases}
+  \!\!\!\!
 \end{align}
 
 
@@ -406,7 +425,7 @@ After accumulation, we must integrate all preimages provided in the lookup extri
 \begin{align}
   \xtpreimages &\in \sequence{\tuple{ \serviceid,\, \blob }} \\
   \label{eq:preimagesareordered}\xtpreimages &= \sqorderuniqby{i}{i \in \xtpreimages} \\
-  \forall \tup{\xp¬service, \xp¬data} &\in \xtpreimages : Y(\accountspre, \xp¬service, \blake{\xp¬data}, \len{\xp¬data}) \\
+  \forall \tup{\xp¬serviceindex, \xp¬data} &\in \xtpreimages : Y(\accountspre, \xp¬serviceindex, \blake{\xp¬data}, \len{\xp¬data}) \\
   \where Y(\mathbf{d}, s, h, l) &\Leftrightarrow
   h \not\in \mathbf{d}\subb{s}_\sa¬preimages \wedge
     \mathbf{d}\subb{s}_\sa¬requests\subb{\tup{h, l}} = \sq{}
@@ -415,12 +434,12 @@ After accumulation, we must integrate all preimages provided in the lookup extri
 We disregard, without prejudice, any preimages which due to the effects of accumulation are no longer useful. We define $\accountspostpreimage$ as the state after the integration of the still-relevant preimages:
 \begin{align}
   \using \mathbf{p} = \set{\build{
-    \tup{\xp¬service, \xp¬data}
+    \tup{\xp¬serviceindex, \xp¬data}
   }{
-    \tup{\xp¬service, \xp¬data} \in \xtpreimages, Y(\accountspostxfer, \xp¬service, \blake{\xp¬data}, \len{\xp¬data})
+    \tup{\xp¬serviceindex, \xp¬data} \in \xtpreimages, Y(\accountspostxfer, \xp¬serviceindex, \blake{\xp¬data}, \len{\xp¬data})
   }}\\
-  \accountspostpreimage = \accountspostxfer \text{ ex. } \forall \tup{\xp¬service,\,\xp¬data} \in \mathbf{p} : \abracegroup[\,]{
-      \quad\accountspostpreimage\subb{\xp¬service}_\sa¬preimages\subb{\blake{\xp¬data}} &= \xp¬data \\
-      \accountspostpreimage\subb{\xp¬service}_\sa¬requests\subb{\blake{\xp¬data}, \len{\xp¬data}} &= \sq{\thetime'}
+  \accountspostpreimage = \accountspostxfer \text{ ex. } \forall \tup{\xp¬serviceindex,\,\xp¬data} \in \mathbf{p} : \abracegroup[\,]{
+      \quad\accountspostpreimage\subb{\xp¬serviceindex}_\sa¬preimages\subb{\blake{\xp¬data}} &= \xp¬data \\
+      \accountspostpreimage\subb{\xp¬serviceindex}_\sa¬requests\subb{\blake{\xp¬data}, \len{\xp¬data}} &= \sq{\thetime'}
     }\!\!\!\!
 \end{align}
